--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,88 +49,52 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.fragment:fragment:1.2.5'
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
-    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
-    dependencies {
-        def lifecycle_version = "2.2.0"
-        def arch_version = "2.1.0"
-
-        // ViewModel
-        implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-        // LiveData
-        implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-        // Lifecycles only (without ViewModel or LiveData)
-        implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-
-        // Saved state module for ViewModel
-        implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-
-        // Annotation processor
-        annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-        // alternately - if using Java8, use the following instead of lifecycle-compiler
-        implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-
-        // optional - helpers for implementing LifecycleOwner in a Service
-        implementation "androidx.lifecycle:lifecycle-service:$lifecycle_version"
-
-        // optional - ProcessLifecycleOwner provides a lifecycle for the whole application process
-        implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
-
-        // optional - ReactiveStreams support for LiveData
-        implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
-
-        // optional - Test helpers for LiveData
-        testImplementation "androidx.arch.core:core-testing:$arch_version"
-    }
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Room
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    // optional - RxJava support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
-    // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
-    // optional - Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
 
-    // Dagger Hilt
+    // Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-    implementation 'androidx.hilt:hilt-work:1.0.0-alpha01'
-    // When using Kotlin.
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
-    // When using Java.
-    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     // Paging
     def paging_version = "3.0.0-alpha12"
     implementation "androidx.paging:paging-runtime:$paging_version"
-    // alternatively - without Android dependencies for tests
-    testImplementation "androidx.paging:paging-common:$paging_version"
-    // optional - RxJava2 support
     implementation "androidx.paging:paging-rxjava2:$paging_version"
-    // optional - RxJava3 support
     implementation "androidx.paging:paging-rxjava3:$paging_version"
-    // optional - Guava ListenableFuture support
     implementation "androidx.paging:paging-guava:$paging_version"
-    // Jetpack Compose Integration
     implementation "androidx.paging:paging-compose:1.0.0-alpha05"
+
+    //RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
