--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.RememberYourLordApp"
+        android:name=".RememberYourLordApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,10 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.MainActivity"
-            android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
-            android:label="@string/app_name" />
+        <activity android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.MainActivity" />
         <activity android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.ui.activity.AddActActivity" />
         <receiver android:name="id.ac.ui.cs.mobileprogramming.nabilafv.rememberyourlord.receiver.NotificationReceiver" />
     </application>
